--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-# See how to get these values here: https://gatsby.dev/shopify-api-keys
-GATSBY_STOREFRONT_ACCESS_TOKEN=4937c10d1e7e19c9b2670aa1560b5c88
+# See how to get these values here: https://gatsby.devshopify-api-keys
+GATSBY_STOREFRONT_ACCESS_TOKEN=26976e6eb30eb1821d2a71f81dabc4aa
 GATSBY_SHOPIFY_STORE_URL=twilightscapes.myshopify.com
-SHOPIFY_API_KEY=5ce649d9527322af08d1eb0f94ee1e8f
-SHOPIFY_SHOP_PASSWORD=f7231d8493e56185824e47954fbf6958
-GOOGLE_ANALYTICS_ID=UA-49869143-1
+SHOPIFY_API_KEY=7f128d477b3250ccb21c2121000198d7
+SHOPIFY_SHOP_PASSWORD=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
+GOOGLE_ANALYTICS_ID=UA-140479230-1
+
